# merilive2

./: .contrast-baseline.json  .env  ANDROID_BUILD_GUIDE.md  ANDROID_CAMERA_FIX.md  ANDROID_NATIVE_SETUP.md  ANDROID_PERMISSIONS_FIX.md  ANDROID_STUDIO_V8_SETUP.md  CRON_SETUP_INSTRUCTIONS.md  DEEP_LINKING_SETUP.md  FrodoLar_Profile_Master_Prompt.md  FrodoLar_Profile_Master_Prompt_v3.md  GOOGLE_PLAY_BILLING_COMPLETE_GUIDE.md  GOOGLE_SIGNIN_FIX_GUIDE.md  NATIVE_ANDROID_GEMINI_PROMPT.md  NATIVE_CAMERA_SDK_GUIDE.md  NATIVE_GOOGLE_AUTH_SETUP.md  NATIVE_SDKS_GUIDE.md  PLAY_STORE_BILLING_SETUP.md  README.md  agency_full.txt  agency_part1.txt  agency_part2.txt  agency_part3.txt  agency_part4.txt  agency_part5.txt  capacitor.config.ts  check_tags.js  convert_config.cjs  fix_ui.py  generate_dart.ps1  index.html  knip.json  optimize-assets.ts  package-lock.json  package.json  pass1_audit.cjs  playwright.config.ts  playwright.e2e-admin.config.ts  playwright.e2e.config.ts  tailwind.config.ts  (+5 more)
.lovable/: NATIVE_API_REFERENCE.md  bug-audit-2026-06-10.md  db-audit-3A.md  db-audit-3B.md  db-audit-3C.md  db-audit-3D.md  edge-audit-2A.md  edge-audit-2B.md  edge-audit-2C.md  edge-audit-2D.md  edge-audit-2E.md  instant-entry-research.md  n3i-owner-apk-test.md  phase-h-audit.md  pkg21-agency-helper-draft.md  plan.md  private-call-android-audit.md  private-call-backend-audit.md  private-call-js-audit.md  private-call-p0-fix-pass.md  private-call-research.md
android-setup/: AndroidManifest_additions.xml  FACEBOOK_SDK_SETUP.md  (+9 more)
android/app/src/main/cpp/: CMakeLists.txt  native_video_engine.cpp
(+5379 files in other folders)
